Let do something with table row

--- a/src/ui/table.scss
+++ b/src/ui/table.scss
@@ -39,6 +39,10 @@ table {
       &:not(:last-child) td {
         border-bottom: 1px solid $border-color;
       }
+
+      &.clickable {
+        cursor: pointer;
+      }
     }
   }
 }
