--- a/src/ui/layout.scss
+++ b/src/ui/layout.scss
@@ -43,8 +43,10 @@
   padding-right: 4rem;
 }
 
-.top-2 {
-  margin-top: 2rem;
+@for $i from 1 through 3 {
+  .top-#{$i} {
+    margin-top: 1rem * $i;
+  }
 }
 
 .left-2 {
@@ -66,6 +68,10 @@
     color: #d6d6d6;
     font-size: 0.7em;
   }
+
+  a {
+    border-bottom: 1px solid #d6d6d6;
+  }
 }
 
 main article {
@@ -77,5 +83,10 @@ main article {
   a {
     color: #4a90e2;
     text-decoration: none;
+  }
+
+  .actions {
+    padding-bottom: 10px;
+    border-bottom: 1px solid #eee;
   }
 }
