--- a/src/ui/buttons.scss
+++ b/src/ui/buttons.scss
@@ -1,3 +1,5 @@
+@import './colors';
+
 .btn {
   font-size: 0.8rem;
   border-radius: 3px;
@@ -20,10 +22,10 @@
 }
 
 .btn-danger {
-  color: red;
-  border-color: red;
+  color: $color-danger;
+  border-color: $color-danger;
   &:active {
     color: white;
-    background-color: red;
+    background-color: $color-danger;
   }
 }
