Split event configuration screen

--- a/src/ui/nav.scss
+++ b/src/ui/nav.scss
@@ -95,3 +95,10 @@ $nav-bg-color: #1c314a;
   }
 }
 
+.settings-menu {
+  a {
+    display: block;
+    line-height: 2rem;
+    height: 2rem;
+  }
+}
